--- a/assets/css/scss/templates/create-product.scss
+++ b/assets/css/scss/templates/create-product.scss
@@ -19,7 +19,7 @@
     background-repeat: no-repeat;
     top: 0;
     background-size: contain;
-    background-image: url("./../images/hero-services.png");
+    background-image: url("./../../images/hero-services.png");
   }
   h1 {
     text-align: center;
@@ -61,7 +61,8 @@
 .form-block {
   padding-top: clamp(rem(40), vw(60), rem(60));
 
-  .success-message {
+  .success-message,
+  .error-message {
     text-align: center;
     font-size: clamp(rem(24), vw(28), rem(28));
     margin-bottom: rem(30);
