--- a/assets/css/scss/templates/home-template.scss
+++ b/assets/css/scss/templates/home-template.scss
@@ -18,7 +18,7 @@
     background-repeat: no-repeat;
     top: 0;
     background-size: contain;
-    background-image: url("./../images/hero-services.png");
+    background-image: url("./../../images/hero-services.png");
   }
   h1 {
     text-align: center;
